src/test/deca/context/valid/param_with_same_name_method.deca
/*
    Description : paramètre du même nom que la méthode appelante

    Résultat : OK
*/
class A{
    void x(int x){
    
    }
}
