src/test/deca/context/invalid/method_with_same_var_of_class.deca
/*
    Description : Test sur la gestion des déclarations de variables de meme nom

    Resultat : Erreur contextuelle (regle 3.17 / condition implicite, deca:8:13)
*/
class A{
    int y;
    void x(){int y;}
}
// @expected_output deca:8:13
